--- a/ControleEstoque/ViewWPF/Views/TelaClientes.xaml
+++ b/ControleEstoque/ViewWPF/Views/TelaClientes.xaml
@@ -8,18 +8,19 @@
         Title="TelaClientes" Height="500" Width="450">
     <Grid>
 
-        <TextBlock HorizontalAlignment="Left" Margin="78,45,0,0" TextWrapping="Wrap" Text="Cadastro de Clientes" VerticalAlignment="Top" Width="258" Height="28" FontSize="22"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Cadastro de Clientes" VerticalAlignment="Top" Width="422" Height="28" FontSize="22" TextAlignment="Center"/>
 
-        <TextBlock x:Name="labelNome" Margin="82,125,0,0" TextWrapping="Wrap" Text="Nome:" VerticalAlignment="Top" Width="76" HorizontalAlignment="Left" TextAlignment="Right"/>
-        <TextBox x:Name="campoNome" HorizontalAlignment="Left" Height="23" Margin="163,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Nome}"/>
+        <TextBlock x:Name="labelNome" Margin="8,65,0,0" TextWrapping="Wrap" Text="Nome:" VerticalAlignment="Top" Width="100" HorizontalAlignment="Left" TextAlignment="Right"/>
+        <TextBox x:Name="campoNome" HorizontalAlignment="Left" Height="23" Margin="113,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="253" Text="{Binding Nome}"/>
 
-        <TextBlock x:Name="labelTelefone" HorizontalAlignment="Left" Margin="82,153,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="76" TextAlignment="Right"><Run Text="Telefone"/><Run Text=":"/></TextBlock>
-        <TextBox x:Name="campoTelefone" HorizontalAlignment="Left" Height="23" Margin="163,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Telefone}"/>
+        <TextBlock x:Name="labelTelefone" HorizontalAlignment="Left" Margin="8,93,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="100" TextAlignment="Right"><Run Text="Telefone"/><Run Text=":"/></TextBlock>
+        <TextBox x:Name="campoTelefone" HorizontalAlignment="Left" Height="23" Margin="113,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="253" Text="{Binding Telefone}"/>
 
-        <TextBlock x:Name="labelEndereco" HorizontalAlignment="Left" Margin="82,181,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="76" TextAlignment="Right" Text="Endereço:"/>
-        <TextBox x:Name="campoEndereco" HorizontalAlignment="Left" Height="23" Margin="163,174,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Endereco}"/>
+        <TextBlock x:Name="labelEndereco" HorizontalAlignment="Left" Margin="8,121,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="100" TextAlignment="Right" Text="Endereço:"/>
+        <TextBox x:Name="campoEndereco" HorizontalAlignment="Left" Height="23" Margin="113,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="253" Text="{Binding Endereco}"/>
 
-        <Button x:Name="btnCadastrarCliente" Content="Cadastrar" HorizontalAlignment="Left" Margin="208,202,0,0" VerticalAlignment="Top" Width="75" Click="btnCadastrarCliente_Click"/>
+        <Button x:Name="btnCadastrarCliente" Content="Cadastrar" HorizontalAlignment="Left" Margin="266,142,0,0" VerticalAlignment="Top" Width="100" Click="btnCadastrarCliente_Click"/>
+        <DataGrid x:Name="dataGridListaCliente" HorizontalAlignment="Left" Height="292" Margin="10,167,0,0" VerticalAlignment="Top" Width="422" RenderTransformOrigin="-0.533,0.023" ItemsSource="{Binding ListaCliente}"/>
 
     </Grid>
 </Window>
