--- a/ControleEstoque/ViewWPF/Views/TelaProdutos.xaml
+++ b/ControleEstoque/ViewWPF/Views/TelaProdutos.xaml
@@ -21,7 +21,7 @@
         <TextBox x:Name="campoDescricao" HorizontalAlignment="Left" Height="23" Margin="163,146,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Descricao}" Grid.ColumnSpan="2"/>
 
         <TextBlock x:Name="labelUN" HorizontalAlignment="Left" Margin="59,181,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Grid.ColumnSpan="2"><Run Text="UN"/><Run Text=":"/></TextBlock>
-        <TextBox x:Name="campoUN" HorizontalAlignment="Left" Height="23" Margin="163,174,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding UN}" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="campoUN" HorizontalAlignment="Left" Height="23" Margin="163,174,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Unidade}" Grid.ColumnSpan="2"/>
 
         <TextBlock x:Name="labelPrecoCusto" HorizontalAlignment="Left" Margin="59,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" TextAlignment="Right" Text="Preço de Custo:" Grid.ColumnSpan="2"/>
         <TextBox x:Name="campoPrecoCusto" HorizontalAlignment="Left" Height="23" Margin="163,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding PrecoCusto}" Grid.ColumnSpan="2"/>
