--- a/ControleEstoque/ViewWPF/Views/TelaVendas.xaml
+++ b/ControleEstoque/ViewWPF/Views/TelaVendas.xaml
@@ -25,8 +25,8 @@
         <TextBlock x:Name="labelQuantidade" Margin="10,177,0,0" TextWrapping="Wrap" Text="Quantidade:" VerticalAlignment="Top" Width="98" HorizontalAlignment="Left" TextAlignment="Right"/>
         <TextBox x:Name="campoQuantidade" HorizontalAlignment="Left" Height="23" Margin="113,170,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="{Binding Quantidade}"/>
 
-        <TextBlock x:Name="labelPrecoUnitario" Margin="10,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="98" HorizontalAlignment="Left" TextAlignment="Right"><Run Text="Preço"/><Run Text=" Unitário"/><Run Text=":"/></TextBlock>
-        <TextBox x:Name="campoPreco" HorizontalAlignment="Left" Height="23" Margin="113,198,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="{Binding ValorUnitario}"/>
+        <TextBlock x:Name="labelValorUnitario" Margin="10,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="98" HorizontalAlignment="Left" TextAlignment="Right"><Run Text="Preço"/><Run Text=" Unitário"/><Run Text=":"/></TextBlock>
+        <TextBox x:Name="campoValorUnitario" HorizontalAlignment="Left" Height="23" Margin="113,198,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="150" Text="{Binding ValorUnitario}"/>
 
         <Button x:Name="btnRegistrarVenda" Content="Registrar" HorizontalAlignment="Left" Margin="188,226,0,0" VerticalAlignment="Top" Width="75" Click="btnRegistrarVenda_Click"/>
 
